--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,11 @@
-body {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
+}
+
+html {
     font-size: 10px;
 }
 
@@ -41,6 +44,7 @@ main {
 .log {
     padding: 2%;
     width: 100%;
+    text-align: center;
     
     .give_name {
         display: block;
@@ -49,7 +53,7 @@ main {
             left: auto;
             right: auto;
             top: 2%;
-            bottom: 4%;
+            bottom: 1%;
         }
         text-align: center;
         font-size: 1.6rem;
@@ -57,6 +61,22 @@ main {
         input {
             vertical-align: middle;
             height: 2rem;
+        }
+    }
+    
+    p {
+        margin-bottom: 4%;
+    }
+    
+    button {
+        width: 30%;
+        height: 3rem;
+        font-size: 2rem;
+        background-color: $main_color;
+        color: $txt_light_color;
+        
+        &:hover {
+            
         }
     }
     
@@ -74,10 +94,6 @@ main {
         width: 50%;
         height: 4rem;
         font-size: 3rem;
-        margin: {
-            left: auto;
-            right: auto;
-        }
         
         &:hover {
             
