--- a/sass/startpage.scss
+++ b/sass/startpage.scss
@@ -96,6 +96,11 @@
 
 .div_game_rules {
     
+    margin: {
+        left: 4rem;
+        right: 4rem;
+    }
+    
     h3 {
         text-align: center;
         margin: 1rem;
