--- a/sass/clean.scss
+++ b/sass/clean.scss
@@ -10,7 +10,10 @@ html {
 
 body {
     overflow-x: hidden;
-    margin-top: 6vh;
+    margin: {
+        top: 6vh;
+        bottom: 6vh;
+    } 
 }
 
 a {
@@ -18,10 +21,9 @@ a {
     color: inherit;
 }
 
-input:focus, button:focus {
-    outline: none;
-}
-
 .invisible {
     display: none;
 }
+
+
+
