--- a/sass/gamepage.scss
+++ b/sass/gamepage.scss
@@ -2,7 +2,8 @@
     width: 100vw;
     height: 100vh;
     
-    display: flex;
+//    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -11,6 +12,15 @@
 .sect_game {
     width: 75vw;
     height: 75vh;
+    
+    .the_game {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
 }
 
 .top_game {
@@ -73,9 +83,9 @@
     }
 }
 
-.the_game {
-    min-height: 70%;
+.throwing_container {
     margin: 4rem auto;
+    width: 100%;
     
     display: flex;
     justify-content: space-around;
@@ -90,6 +100,7 @@
         text-transform: uppercase;
         
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
         justify-content: center;
         align-items: center;
