--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ a { text-decoration: none; color: inherit; }
 .btn_decision:disabled { cursor: none; }
 
 .game_winner { display: none; position: fixed; top: 35%; lefy: 35%; width: 30%; padding: 2rem; background-color: rgba(50, 50, 50, 0.7); text-align: center; color: #fefefe; }
+.game_winner:hover { cursor: auto; }
 
 .from_begining_btn { display: block; margin: 2rem auto; background-color: #ffba00; color: #010101; }
 
