--- a/sass/helpers.scss
+++ b/sass/helpers.scss
@@ -26,3 +26,9 @@ $yellow_color: #ffba00;
         background-image: url('../img/dices_gold.png');
     }
 }
+
+@keyframes arrow {
+    0% { transform: translateY(8rem)}
+    50% { transform: translateY(0rem)}
+    100% { transform: translateY(-8rem)}
+}
