--- a/sass/startpage.scss
+++ b/sass/startpage.scss
@@ -104,6 +104,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     
     h3 {
         text-align: center;
