--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ footer a:hover { color: #ffba00; }
 .sect_game { width: 75vw; height: 75vh; }
 .sect_game .the_game { width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-content: center; }
 
-.top_game { width: 100%; display: flex; justify-content: space-around; flex-wrap: wrap; }
+.top_game { width: 100%; display: flex; justify-content: space-around; flex-wrap: wrap; margin-bottom: 1rem; }
 .top_game .div_round { flex: 3; font-size: 3.2rem; font-weight: 400; font-family: "Montserrat", sans-serif; letter-spacing: .4rem; text-transform: uppercase; display: flex; justify-content: center; align-items: center; }
 .top_game .div_round span { display: block; width: 4.2rem; height: 4.2rem; background-color: #ffba00; border-radius: 50%; line-height: 4.2rem; text-align: center; color: #000; margin: 1rem; }
 .top_game ul { flex: 1; list-style: none; display: flex; flex-direction: column; justify-content: space-around; font-size: 1.2rem; font-family: "Roboto", sans-serif; }
@@ -77,7 +77,7 @@ footer a:hover { color: #ffba00; }
 .throwing_container { margin: 4rem auto; width: 100%; display: flex; justify-content: space-around; align-items: center; }
 .throwing_container .div_throw { flex: 2; font-size: 2rem; font-family: "Montserrat", sans-serif; letter-spacing: .4rem; text-transform: uppercase; display: flex; flex-wrap: wrap; flex-direction: column; justify-content: center; align-items: center; }
 .throwing_container .div_throw .dice { width: 8rem; height: 8rem; line-height: 8rem; margin: 2rem; font-family: "Roboto", sans-serif; text-align: center; font-size: 6rem; color: #ffba00; background-color: #010101; }
-.throwing_container .div_throw .sum { font-family: "Roboto", sans-serif; font-size: 1.2rem; margin: 1rem auto; }
+.throwing_container .div_throw .sum { font-family: "Roboto", sans-serif; font-size: 1.2rem; margin: 1rem auto; min-height: 3rem; }
 .throwing_container .div_decision { flex: 1; display: flex; flex-direction: column; justify-content: center; align-items: center; }
 .throwing_container .div_decision button { margin: 2rem; }
 .throwing_container .div_decision div { text-align: center; font-family: "Roboto", sans-serif; padding: 1rem; font-size: 1.2rem; min-height: 7rem; align-self: flex-end; }
